# ECAP5-DSOC

./: CMakeLists.txt  README.md
.github/workflows/: ci-config.yml
config/: pinout.lpf
config/gtkwave/config/: ecap5-dsoc.gtkw
docs/: CMakeLists.txt
docs/src/: conf.py  index.rst
docs/src/arch/: 1_introduction.rst  2_overall-description.rst  3_requirements.rst  4_configuration.rst  5_architecture.rst  index.rst
firmware/: CMakeLists.txt  helloworld.S  link.ld
firmware/bootloader/: bootloader.S  elf.S  flash.S  spi.S  uart.S
firmware/helloworld/: helloworld.S
src/: ecap5_dsoc.sv  poweron_reset.sv
tests/: CMakeLists.txt
tests/benches/: CMakeLists.txt
tests/benches/ecap5_dsoc/: tb_ecap5_dsoc.cpp  tb_ecap5_dsoc.sv
tests/programs/: CMakeLists.txt  README.md  link.ld  main.c
